--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@ footer {
   </style>
 </head>
 <body>
+	<nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="terms.html">Terms of Service</a></li>
+      </ul>
+    	</nav>
 	<header>
 		<h1>Foodie Voyager Budget App</h1>
 	</header>
