--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RGP Lego Bricks</title>
+    <title>Foodie Homepage</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -11,7 +11,6 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Products</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
@@ -20,15 +19,15 @@
     </nav>
 
     <header>
-      <h1>Welcome to the RGP Lego bricks Website</h1>
-      <p>We offer quality products and services for all your needs.</p>
+      <h1>Welcome to the Foodie Budget Manager Website</h1>
+      <p>Here we help you to plan your trips with ease and manage your expenses while you enjoy you vacation.</p>
     </header>
 
     <main>
       <section>
-        <h2>Featured Products</h2>
-        <p>Check out our latest products!</p>
-        <a href='products.html'><button>View Products</button></a>
+        <h2>Want to learn more about us?</h2>
+        <p>Visit our Contact page!</p>
+        <a href='contact.html'><button>View Products</button></a>
       </section>
 
       <section>
@@ -39,13 +38,13 @@
 
       <section>
         <h2>Latest Blog Posts</h2>
-        <p>Read our latest blog posts for news and updates.</p>
+        <p>Read our latest posts for news and updates.</p>
          <a href='blog.html'><button>View Blog</button></a>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2023 RGP. All rights reserved.</p>
+      <p>&copy; 2023 Foodie Budget Travel. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
