--- a/contact.html
+++ b/contact.html
@@ -640,7 +640,7 @@ button,
     </style>
   </head>
   <body>
-
+<center>
 
     <section class="contact">
       <div class="container">
@@ -654,7 +654,7 @@ button,
           <div class="contact-form">
             <form action="#">
               <div>
-                <label for="firstName" class="sr-only">First Name</label>
+                <label for="firstName" class="sr-only" required>First Name</label>
                 <input
                   type="text"
                   name="firstName"
@@ -663,7 +663,7 @@ button,
                 />
               </div>
               <div>
-                <label for="lastName" class="sr-only">Last Name</label>
+                <label for="lastName" class="sr-only" required>Last Name</label>
                 <input
                   type="text"
                   name="lastName"
@@ -672,7 +672,7 @@ button,
                 />
               </div>
               <div>
-                <label for="email" class="sr-only">Email</label>
+                <label for="email" class="sr-only" required>Email</label>
                 <input
                   type="email"
                   name="email"
@@ -692,7 +692,7 @@ button,
       </div>
     </section>
 
-  
+  </center>
     <script src="js/app.js"></script>
   </body>
 </html>
