--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@ footer {
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Planner</a></li>
+        <li><a href="vbp.html">About</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
@@ -182,6 +183,11 @@ footer {
         <h2>Latest Blog Posts</h2>
         <p>Read our latest posts for news and updates.</p>
          <a href='blog.html'><button>View Blog</button></a>
+      </section>
+      <section>
+        <h2>Want to Check On your trips?</h2>
+        <p>Go to the View Budget Plans page to check on them</p>
+         <a href='vbp.html'><button>View Plan</button></a>
       </section>
     </main>
 
