--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ footer {
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Planner</a></li>
-        <li><a href="vbp.html">About</a></li>
+        <li><a href="vbp.html">Planner</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
