--- a/index.html
+++ b/index.html
@@ -1,166 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foodie Homepage</title>
-    <style>
-      /* Global Styles */
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-nav {
-  background-color: #333;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  align-items: center;
-}
-
-nav ul li {
-  margin-right: 20px;
-}
-
-nav ul li:last-child {
-  margin-right: 0;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-header {
-  background-color: #f2f2f2;
-  text-align: center;
-  padding: 100px;
-}
-
-main {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px;
-}
-
-section {
-  flex-basis: 30%;
-}
-
-h2 {
-  margin-bottom: 10px;
-}
-
-p {
-  line-height: 1.5;
-}
-
-footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 20px;
-}
-
-/* Page-Specific Styles */
-
-/* About Page */
-
-.about-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px;
-}
-
-.about-image {
-  flex-basis: 50%;
-}
-
-.about-image img {
-  width: 100%;
-  height: auto;
-}
-
-.about-text {
- 
-/* Contact Page */
-
-.contact-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px;
-}
-
-.contact-form {
-  flex-basis: 50%;
-}
-
-.contact-form label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-.contact-form input[type="text"],
-.contact-form input[type="email"],
-.contact-form textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.contact-form input[type="submit"] {
-  background-color: #333;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.contact-form input[type="submit"]:hover {
-  background-color: #555;
-}
-
-/* Privacy Policy and Terms of Service Pages */
-
-.policy-container,
-.terms-container {
-  padding: 50px;
-}
-    </style>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>My Awesome Website</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
         <li><a href="vbp.html">Planner</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
         <li><a href="terms.html">Terms of Service</a></li>
-      </ul>
-    </nav>
-
+			</ul>
+		</nav>
+		<h1>Welcome to My Awesome Website!</h1>
+		<p>Here's where you can put some descriptive text about your website.</p>
+		<button>Learn More</button>
+    </header>
     <header>
       <h1>Welcome to the Foodie Budget Manager Website</h1>
       <p>Here we help you to plan your trips with ease and manage your expenses while you enjoy you vacation.</p>
